--- a/web/package.json
+++ b/web/package.json
@@ -13,12 +13,15 @@
   "license": "GPL-3.0",
   "packageManager": "yarn@3.0.2",
   "dependencies": {
-    "@mui/material": "^5.0.2",
-    "next": "^11.1.2",
+    "bootstrap": "^5.1.1",
+    "next": "^12.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^2.0.0-rc.1",
+    "react-dom": "^17.0.2",
+    "sass": "^1.49.8"
   },
   "devDependencies": {
+    "@types/node": "^17.0.19",
     "@types/react": "^17.0.27",
     "typescript": "^4.4.3"
   }
