--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,14 @@ build/Release
 node_modules/
 jspm_packages/
 
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 # TypeScript v1 declaration files
 typings/
 
